# create_rust_python_image

./: Cargo.toml  Dockerfile  Dockerfile python image  Dockerfile working with rust and python  README.md  commands to build base image.txt
my_registry/index/cr/os/: crossbeam-deque  crossbeam-utils
my_registry/index/ei/th/: either
src/: main.rs
