[package]
name = "dummy_project"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0"
suppaftp = "5.2.0"
tokio = { version = "1", features = ["full"] }
chrono = {version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2.2"
rayon = "1.10.0"
anyhow = "1.0"
dotenvy = "0.15"
once_cell = "1.19"
oracle = "0.6.3"
rand = "0.8"
num_cpus = "1.13"
pyo3 = { version = "0.25", features = ["extension-module"] }
dashmap = "5"